--- a/templates/prom-configmap.yml
+++ b/templates/prom-configmap.yml
@@ -5,10 +5,12 @@ metadata:
 data:
   prometheus.yml: |
     global:
-      scrape_interval:     5s 
-      evaluation_interval: 5s 
-  scrape_configs:
-     - job_name: 'prometheus'
+      scrape_interval: 10s
+      scrape_timeout: 10s
+      evaluation_interval: 10s
+    scrape_configs:
+    
+    - job_name: 'prometheus'
        static_configs:
          - targets: ['localhost:9090']
          
