--- a/templates/prom-configmap.yml
+++ b/templates/prom-configmap.yml
@@ -14,4 +14,4 @@ data:
          - targets: ['localhost:9090']         
     - job_name: 'demoapplication'
       static_configs:
-         - targets: ['demoapplication:8080']
+         - targets: ['http://restservice-demoapplication.osetest.delta.com/metrics']
