--- a/templates/prom-configmap.yml
+++ b/templates/prom-configmap.yml
@@ -14,4 +14,7 @@ data:
          - targets: ['localhost:9090']         
     - job_name: 'demoapplication'
       static_configs:
-         - targets: ['localhost:8080']
+         - targets: ['restservice:8080']         
+    - job_name: 'demoapplication'
+      static_configs:
+         - targets: ['cadvisor:8080']
