--- a/templates/prom-configmap.yml
+++ b/templates/prom-configmap.yml
@@ -18,3 +18,6 @@ data:
     - job_name: 'cadvisor'
       static_configs:
          - targets: ['cadvisor:8080']
+    - job_name: 'testapp'
+      static_configs:
+         - targets: ['testapp:8080']
