--- a/templates/prometheus.yaml
+++ b/templates/prometheus.yaml
@@ -1,17 +1,34 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: prom-k8s
+  name: alert-rules
 data:
-  prometheus.yml: |
-    global:
-      scrape_interval:     5s 
-      evaluation_interval: 5s 
-scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
-
-  - job_name: 'demoapp'
-    static_configs:
-      - targets: ['cadvisor:8080']
+   prometheus.rules: |
+   groups:
+   - name: example-rules
+     interval: 30s # defaults to global interval
+     rules:
+     - alert: "Node Down"
+       expr: up{job="kubernetes-nodes"} == 0
+       annotations:
+         miqTarget: "ContainerNode"
+         severity: "ERROR"
+         url: "https://www.example.com/node_down_fixing_instructions"
+         message: "Node {{$labels.instance}} is down"
+     - alert: "Too Many Pods"
+       expr: sum(kubelet_running_pod_count) > 15
+       annotations:
+         miqTarget: "ExtManagementSystem"  
+         severity: "ERROR"
+         url: "https://www.example.com/too_many_pods_fixing_instructions"
+         message: "Too many running pods"
+     - alert: "Node CPU Usage"
+       expr: (100 - (avg by (instance) (irate(node_cpu{app="prometheus-node-exporter",mode="idle"}[5m])) * 100)) > 3
+       for: 30s
+       labels:
+         severity: "ERROR"
+       annotations:
+         miqTarget: "ExtManagementSystem"
+         severity: "ERROR"
+         url: "https://www.example.com/too_many_pods_fixing_instructions"
+         message: "{{$labels.instance}}: CPU usage is above 4% (current value is: {{ $value }})"
