--- a/templates/prometheus-alertrules.yaml
+++ b/templates/prometheus-alertrules.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: prometheus
+  name: prometheus-alertrules
 data:
   prometheus.yml: |-
     global:
