--- a/templates/prom-configmap.yml
+++ b/templates/prom-configmap.yml
@@ -8,6 +8,8 @@ data:
       scrape_interval: 10s
       scrape_timeout: 10s
       evaluation_interval: 10s
+    rule_files:
+    - '/etc/prometheus-rules/alert.rules'
     scrape_configs:    
     - job_name: 'prometheus'
       static_configs:
