--- a/templates/prometheus-alerts.yml
+++ b/templates/prometheus-alerts.yml
@@ -2,10 +2,10 @@ apiVersion: v1
 data:
  alertmanager.yml: |
    global:
-     smtp_smarthost: 'in-v3.mailjet.com:25'
-     smtp_from: 'xxxx@gmail.com'
-     smtp_auth_username: 'xxxxx'
-     smtp_auth_password: 'xxxxx'
+     smtp_smarthost: 'smtp.delta.com:25'
+     smtp_from: 'prometheusAlerts@delta.com'
+#     smtp_auth_username: 'xxxxx'
+#     smtp_auth_password: 'xxxxx'
    # The root route on which each incoming alert enters.
    route:
      # default route if none match
@@ -23,10 +23,10 @@ data:
      - url: http://localhost:9099/topics/alerts
    - name: mail
      email_configs:
-     - to: "info@containers.ninja"
+     - to: "satabdi.das@delta.com"
    - name: all
      email_configs:
-     - to: "info@containers.ninja"
+     - to: "satabdi.das@delta.com"
      webhook_configs:
      - url: http://localhost:9099/topics/alerts
 kind: ConfigMap
