--- a/templates/prometheus-alerts.yml
+++ b/templates/prometheus-alerts.yml
@@ -3,7 +3,7 @@ data:
  alertmanager.yml: |
    global:
      smtp_smarthost: 'smtp.delta.com:25'
-     smtp_from: 'prometheusAlerts@delta.com'
+     smtp_from: 'PrometheusAlerts@delta.com'
 #     smtp_auth_username: 'xxxxx'
 #     smtp_auth_password: 'xxxxx'
    # The root route on which each incoming alert enters.
