--- a/templates/promWithAlertManager.yml
+++ b/templates/promWithAlertManager.yml
@@ -14,11 +14,10 @@ spec:
       labels:
         app: prometheus-monitoring
     spec:
-
       containers:
       # Prometheus server
       - name: prometheus
-        image: prom/prometheus:v1.3.1
+        image: prom/prometheus
         args:
           - '-storage.local.retention=72h'
           - '-storage.local.path=/home'
@@ -38,22 +37,20 @@ spec:
           mountPath: /home
         resources:
           limits:
-            cpu: 12000m
-            memory: 10000Mi
+            cpu: 2000m
+            memory: 2000Mi
           requests:
-            cpu: 4000m
-            memory: 4000Mi
+            cpu: 1000m
+            memory: 1000Mi
 
       #Alert manager
       - name: alertmanager
-        image: quay.io/prometheus/alertmanager:v0.5.0
+        image: prom/alertmanager
         args:
           - -config.file=/etc/prometheus/alertmanager.yml
         volumeMounts:
         - name: config-volume-alertmanager
           mountPath: /etc/prometheus
-
-      # Volumes and config maps
       volumes:
       - name: config-volume-prometheus
         configMap:
