--- a/templates/prometheusAlertRules.yml
+++ b/templates/prometheusAlertRules.yml
@@ -4,19 +4,5 @@ metadata:
   name: prometheus-alert-rules
 data:
   fortAlert.rules: |-
-    ALERT HighCPU
-      IF ((sum(node_cpu{mode=~"user|nice|system|irq|softirq|steal|idle|iowait"}) by (instance, job)) - ( sum(node_cpu{mode=~"idle|iowait"}) by (instance,job) )   )   /  (sum(node_cpu{mode=~"user|nice|system|irq|softirq|steal|idle|iowait"}) by (instance, job)) * 100 > 95
-      FOR 1m
-      LABELS { service = "cadvisor" }
-      ANNOTATIONS {
-        summary = "High CPU Usage",
-        description = "This machine  has really high CPU usage for over 10m",
-      }
-    ALERT DNSLookupFailureFromPrometheus
-      IF prometheus_dns_sd_lookup_failures_total > 1
-      FOR 1m
-      LABELS { service = "testapp" }
-      ANNOTATIONS {
-        summary = "Prometheus reported over 5 DNS lookup failure",
-        description = "The prometheus unit reported that it failed to query the DNS.  Look at the kube-dns to see if it is having any problems",
-      }
+    ALERT service_down
+  IF up == 0
