--- a/templates/prom-configmap.yml
+++ b/templates/prom-configmap.yml
@@ -9,7 +9,7 @@ data:
       scrape_timeout: 10s
       evaluation_interval: 10s
     rule_files:
-    - '/etc/prometheus/fortAlert.rules'
+    - 'prometheus.rules'
     scrape_configs:    
     - job_name: 'prometheus'
       static_configs:
