--- a/templates/prom-config-rules.yml
+++ b/templates/prom-config-rules.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: prom-k8s
+  name: prom-rules
 data:
   prometheus.rules: |
       groups:
@@ -15,28 +15,5 @@ data:
             severity: "HIGH"
             message: "{{$labels.instance}} is down"
   prometheus.yml: |
-    global:
-      scrape_interval: 10s
-      scrape_timeout: 10s
-      evaluation_interval: 10s
     rule_files:
-    - 'prometheus.rules'
-    scrape_configs:    
-    - job_name: 'prometheus'
-      static_configs:
-         - targets: ['localhost:9090']         
-    - job_name: 'demoapplication'
-      static_configs:
-         - targets: ['restservice:8080']         
-    - job_name: 'cadvisor'
-      static_configs:
-         - targets: ['cadvisor:8080']
-    - job_name: 'testapp'
-      static_configs:
-         - targets: ['testapp:8080']
-    alerting:
-      alertmanagers:
-      - scheme: http
-        static_configs:
-        - targets:
-          - "alert-manager-ip:9093"
+    - 'prometheus.rules'    
