--- a/templates/prom-configmap.yml
+++ b/templates/prom-configmap.yml
@@ -8,6 +8,8 @@ data:
       scrape_interval: 10s
       scrape_timeout: 10s
       evaluation_interval: 10s
+    rule_files:
+    - '/etc/prometheus-rules/fortAlert.rules'
     scrape_configs:    
     - job_name: 'prometheus'
       static_configs:
@@ -21,9 +23,9 @@ data:
     - job_name: 'testapp'
       static_configs:
          - targets: ['testapp:8080']
-    alerting:
-      alertmanagers:
-      - scheme: http
-        static_configs:
-        - targets:
-          - "alert-manager-ip:9093"
+  alerting:
+    alertmanagers:
+    - scheme: http
+      static_configs:
+      - targets:
+        - "alert-manager-ip:9093"
