--- a/templates/standaloneProm.yml
+++ b/templates/standaloneProm.yml
@@ -24,17 +24,11 @@ spec:
           - '-storage.local.memory-chunks=500000'
           - '-config.file=/etc/prometheus/prometheus.yml'
           - '-alertmanager.url=http://localhost:9093'
-          - '-web.external-url=http://prometheus.example.com'
+          - '-web.external-url=https://evila570.delta.com/prometheus'
+          - '-web.route-prefix=/prometheus'
         ports:
         - name: web
           containerPort: 9090
-        volumeMounts:
-        - name: config-volume-prometheus
-          mountPath: /etc/prometheus
-        - name: config-volume-alert-rules
-          mountPath: /etc/prometheus-rules
-        - name: prometheus-data
-          mountPath: /home
         resources:
           limits:
             cpu: 12000m
