--- a/templates/standaloneProm.yml
+++ b/templates/standaloneProm.yml
@@ -17,11 +17,11 @@ spec:
       containers:
       # Prometheus server
       - name: prometheus
-        image: prom/prometheus:v1.3.1
+        image: prom/prometheus
         args:
           - '-storage.local.retention=72h'
           - '-storage.local.path=/home'
-          - '-storage.local.memory-chunks=500000'
+          - '-storage.local.memory-chunks=50000'
           - '-config.file=/etc/prometheus/prometheus.yml'
           - '-alertmanager.url=http://localhost:9093'
           - '-web.external-url=https://evila570.delta.com/prometheus'
@@ -31,8 +31,8 @@ spec:
           containerPort: 9090
         resources:
           limits:
-            cpu: 12000m
-            memory: 10000Mi
+            cpu: 1000m
+            memory: 1000Mi
           requests:
-            cpu: 4000m
-            memory: 4000Mi
+            cpu: 2000m
+            memory: 2000Mi
