--- a/templates/standaloneProm.yml
+++ b/templates/standaloneProm.yml
@@ -21,7 +21,7 @@ spec:
         args:
           - '-storage.local.retention=72h'
           #- '-storage.local.path=/home'
-          - '-storage.local.memory-chunks=50000'
+          #- '-storage.local.memory-chunks=50000'
           - '-config.file=/etc/prometheus/prometheus.yml'
           - '-alertmanager.url=http://localhost:9093'
           - '-web.external-url=https://evila570.delta.com/prometheus'
