--- a/templates/standaloneProm.yml
+++ b/templates/standaloneProm.yml
@@ -29,10 +29,10 @@ spec:
         ports:
         - name: web
           containerPort: 9090
-        resources:
-          limits:
-            cpu: 1000m
-            memory: 1000Mi
-          requests:
-            cpu: 2000m
-            memory: 2000Mi
+        #resources:
+         # limits:
+          #  cpu: 1000m
+           # memory: 1000Mi
+          #requests:
+           # cpu: 2000m
+           # memory: 2000Mi
