--- a/templates/standaloneProm.yml
+++ b/templates/standaloneProm.yml
@@ -33,6 +33,6 @@ spec:
           limits:
             cpu: 2000m
             memory: 2000Mi
-          requests:
-            cpu: 1000m
-            memory: 1000Mi
+          #requests:
+            #cpu: 1000m
+            #memory: 1000Mi
