--- a/templates/prom-config19.yml
+++ b/templates/prom-config19.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: promconfig
+  name: promconfig-rule
 data:
   prometheus.yml: |
     global:
@@ -9,7 +9,7 @@ data:
       scrape_timeout: 10s
       evaluation_interval: 10s
     rule_files:
-    - '/etc/prometheus-rules/fortalert.rules'
+    - '/etc/prometheus-rules/fortalerts.yml'
     scrape_configs:    
     - job_name: 'prometheus'
       static_configs:
