--- a/templates/prom-config19.yml
+++ b/templates/prom-config19.yml
@@ -28,4 +28,4 @@ data:
       - scheme: http
         static_configs:
         - targets:
-          - "alert-manager-ip:9093"
+          - "alertmanager:9093"
