--- a/templates/alertmanagerConfig.yml
+++ b/templates/alertmanagerConfig.yml
@@ -6,7 +6,10 @@ data:
      smtp_from: 'PrometheusAlerts@delta.com'
    route:
      receiver: all
-     group_by: []
+     #group_by: []
+     group_wait: 30s
+     group_interval: 10s
+     repeat_interval: 10s
    receivers:
    - name: alert-buffer-wh
      webhook_configs:
