--- a/templates/alertmanagerConfig.yml
+++ b/templates/alertmanagerConfig.yml
@@ -13,7 +13,7 @@ data:
      group_wait: 30s
      group_interval: 10s
      repeat_interval: 10s
-     continue: true
+     #continue: true
    receivers:
    - name: mail
      email_configs:
