--- a/templates/prom-config570-1.yml
+++ b/templates/prom-config570-1.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
-kind: ConfigMap1
+kind: ConfigMap
 metadata:
-  name: promconfig
+  name: promconfig1
 data:
   prometheus.yml: |
     global:
