--- a/templates/prom-config.yml
+++ b/templates/prom-config.yml
@@ -16,7 +16,12 @@ data:
          - targets: ['localhost:9090']         
     - job_name: 'fort'
       static_configs: 
-         - targets: ['reverse-proxy:8080/healthcheck']         
+         - targets: ['reverse-proxy:8080']     
+      metrics_path: /healthcheck
+     - job_name: 'fort80'
+      static_configs: 
+         - targets: ['reverse-proxy:80']     
+      metrics_path: /healthcheck
     - job_name: 'cadvisor'
       static_configs:
          - targets: ['cadvisor:8080']
