--- a/templates/standaloneProm.yml
+++ b/templates/standaloneProm.yml
@@ -1,31 +1,21 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: prometheus-monitoring
+  name: prometheus
   labels:
+    name: prometheus
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: prometheus-monitoring
-  template:
-    metadata:
-      name: prometheus-monitoring
-      labels:
-        app: prometheus-monitoring
-    spec:
-      containers:
-      # Prometheus server
-      - name: prometheus
-        image: prom/prometheus
-        args:          
-          -- '-alertmanager.url=http://localhost:9093'
-          -- '-web.external-url=https://evila570.delta.com/prometheus'
-          -- '-web.route-prefix=/prometheus'
-        ports:
-        - name: web
-          containerPort: 9090
-        resources:
-          limits:
-            cpu: 2000m
-            memory: 2000Mi
+  containers:
+  - name: prometheus
+    image: prom/prometheus
+    args:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--web.external-url=http://evila570.delta.com/prometheus'
+      - '--web.route-prefix=/'
+    command:
+      - /bin/prometheus
+  nodeSelector:
+    site: prometheus-1 
