--- a/templates/standaloneProm.yml
+++ b/templates/standaloneProm.yml
@@ -1,21 +1,26 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+kind: Deployment
 metadata:
   name: prometheus
-  labels:
-    name: prometheus
 spec:
-  containers:
-  - name: prometheus
-    image: prom/prometheus
-    args:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
-      - '--web.external-url=http://evila570.delta.com/prometheus'
-      - '--web.route-prefix=/'
-    command:
-      - /bin/prometheus
-  nodeSelector:
-    site: prometheus-1 
+  selector:
+    matchLabels:
+      app: prometheus
+  replicas: 1 # tells deployment to run 2 pods matching the template
+  template:
+    metadata:
+      labels:
+        app: prometheus
+    spec:
+      containers:
+      - name: prometheus
+        image: prom/prometheus
+        ports:
+        - containerPort: 9090
+        args:
+        - '--config.file=/etc/prometheus/prometheus.yml'
+        - '--storage.tsdb.path=/prometheus'
+        - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+        - '--web.console.templates=/usr/share/prometheus/consoles'
+        command:
+        - /bin/prometheus
