--- a/templates/prom-config19.yml
+++ b/templates/prom-config19.yml
@@ -9,20 +9,17 @@ data:
       scrape_timeout: 10s
       evaluation_interval: 10s
     rule_files:
-    - '/etc/prometheus-rules/fortalerts.yml'
+    - '/etc/prometheus-rules/fortalerts.rules'
     scrape_configs:    
     - job_name: 'prometheus'
       static_configs:
-         - targets: ['localhost:9090']         
-    - job_name: 'demoapplication'
-      static_configs:
-         - targets: ['restservice:8080']         
+         - targets: ['localhost:9090'] 
     - job_name: 'cadvisor'
       static_configs:
          - targets: ['cadvisor:8080']
-    - job_name: 'testapp'
+    - job_name: 'alertmanager'
       static_configs:
-         - targets: ['testapp:8080']
+         - targets: ['alertmanager:9093']
     alerting:
       alertmanagers:
       - scheme: http
